// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BallScale> <BallScale> Mount: enzyme.mount 1`] = `
.css-0 > div,
[data-css-0] > div {
  border-radius: 100%;
  height: 60px;
  margin: 2px;
  width: 60px;
  background-color: #ffffff;
  animation-fill-mode: both;
  animation: animation_3rvwq6 1s 0s ease-in-out infinite;
  display: inline-block;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_3rvwq6 1s 0s ease-in-out infinite;
}

<BallScale
  loading={true}
>
  <div
    data-css-0=""
  >
    <div />
  </div>
</BallScale>
`;

exports[`<BallScale> <BallScale> Render: enzyme.render 1`] = `
.css-0 > div,
[data-css-0] > div {
  border-radius: 100%;
  height: 60px;
  margin: 2px;
  width: 60px;
  background-color: #ffffff;
  animation-fill-mode: both;
  animation: animation_3rvwq6 1s 0s ease-in-out infinite;
  display: inline-block;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_3rvwq6 1s 0s ease-in-out infinite;
}

<div
  data-css-0=""
>
  <div />
</div>
`;

exports[`<BallScale> <BallScale> Shallow: enzyme.shallow 1`] = `
.css-0 > div,
[data-css-0] > div {
  border-radius: 100%;
  height: 60px;
  margin: 2px;
  width: 60px;
  background-color: #ffffff;
  animation-fill-mode: both;
  animation: animation_3rvwq6 1s 0s ease-in-out infinite;
  display: inline-block;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_3rvwq6 1s 0s ease-in-out infinite;
}

<div
  data-css-0=""
>
  <div />
</div>
`;
